# summary

./: .gitignore  README.md
Desktop/summary-1/wheelhouse/: pydantic_core-2.33.2-cp39-cp39-macosx_11_0_arm64.whl
mcp_server/: server.py  stdio_server.py  utils.py
summary/: LICENSE  mcp_server.py  pyproject.toml  requirements.txt
summary/docs/: index.html
summary/mcp_server/: exceptions.py  parser_excel.py  parser_ppt.py  parser_word.py  server.py
tests/: test_server.py
wheelhouse/: charset_normalizer-3.4.2-cp39-cp39-macosx_10_9_universal2.whl  starlette-0.47.1-py3-none-any.whl
